# cookiecutter-full-stack-flask

./: .gitignore  README.md  cookiecutter.json
development/: .env.example  LICENSE  README.md  pyproject.toml
development/deploy/: .dockerignore  Dockerfile  docker-compose.yaml
development/flaskr/: __init__.py  extensions.py
development/flaskr/api/api_v1/: auth.py
development/flaskr/core/: __init__.py  config.py  http.py  logs.py  mail.py
development/flaskr/entity/: user.py
development/flaskr/forms/: auth.py
development/flaskr/models/: __init__.py  user.py  web_response.py
development/flaskr/repository/: repository.py  user_repository.py
development/flaskr/schemas/: user.py
development/flaskr/templates/: base.html  index.html
development/flaskr/templates/auth/: confirm_email.html  login.html  register.html
development/flaskr/templates/core/: index.html
development/flaskr/templates/errors/: 401.html  404.html  405.html  500.html
development/flaskr/templates/include/: navigation.html
development/flaskr/views/: __init__.py  auth.py  core.py
development/instance/: testdb.sqlite
development/tests/: conftest.py  test_config.py  test_forms.py  test_repository.py
{{ cookiecutter.project_slug }}/: .env  .gitignore  README.md  pyproject.toml
{{ cookiecutter.project_slug }}/.github/: pytest.yml
{{ cookiecutter.project_slug }}/.github/workflows/: pytest.yml
{{ cookiecutter.project_slug }}/deploy/: Dockerfile
{{ cookiecutter.project_slug }}/flaskr/core/: __init__.py  config.py  decorators.py  http.py  token.py
{{ cookiecutter.project_slug }}/flaskr/forms/: __init__.py
{{ cookiecutter.project_slug }}/instance/: testdb.sqlite
{{ cookiecutter.project_slug }}/tests/: conftest.py  test_api_auth.py  test_repository.py  test_route_auth.py
{{cookiecutter.project_slug}}/: .env.example  .gitignore  README.md  pyproject.toml
{{cookiecutter.project_slug}}/deploy/: .dockerignore  Dockerfile  docker-compose.yaml
{{cookiecutter.project_slug}}/flaskr/: __init__.py  extensions.py
{{cookiecutter.project_slug}}/flaskr/core/: __init__.py  config.py
{{cookiecutter.project_slug}}/flaskr/templates/: base.html
{{cookiecutter.project_slug}}/tests/: test_config.py
(+16 files in other folders)
