[tool.poetry]
name = "Cookiecutter flask"
version = "1.0.0"
description = "Cookiecutter template"
authors = ["example <example@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^3.0.2"
Flask-SQLAlchemy = "^3.1.1"
flask-jwt-extended = "^4.6.0"
flask-bcrypt = "^1.0.1"
flask-mail = "^0.9.1"
flask-login = "^0.6.3"
flask-testing = "^0.8.1"
Flask-WTF = "^1.2.1"
pydantic = "^2.6.1"
pydantic-settings = "^2.1.0"
loguru = "^0.7.2"
pytest = "^8.0.0"
coverage = "^7.4.1"
bcrypt = "^4.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
