[tool.poetry]
name = "{{cookiecutter-project-slug}}"
version = "1.0.0"
description = "{{cookiecutter.description}}"
authors = ["example <example@gmail.com>"]
license = "{{cookiecutter.open_source_license}}"
readme = "README.md"
packages = [{include = "{{cookiecutter"}]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^3.0.2"
Flask-JWT = "^0.3.2"
Flask-SQLAlchemy = "^3.1.1"
Flask-Bcrypt = "^1.0.1"
Flask-WTF = "^1.2.1"
pydantic = "^2.6.1"
pydantic-settings = "^2.1.0"
loguru = "^0.7.2"
pytest = "^8.0.0"
coverage = "^7.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
